// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchForm should show component 1`] = `
<div>
  <form
    class="search-form"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          🔍
        </span>
      </div>
      <div
        class=" css-1s1mbqj-SelectContainer"
      >
        <div
          class=" css-yk16xz-control"
        >
          <div
            class=" css-1wcf4nn-ValueContainer"
          >
            <div
              class=" css-1wa3eu0-placeholder"
            >
              Enter city name
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-2-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`SearchForm should show loading indicator when typing 1`] = `
<div>
  <form
    class="search-form"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          🔍
        </span>
      </div>
      <div
        class=" css-1s1mbqj-SelectContainer"
      >
        <span
          aria-live="polite"
          class="css-1f43avz-a11yText-A11yText"
        >
          <span
            id="aria-selection-event"
          >
             
            
          </span>
          <span
            id="aria-context"
          >
             
              0 results available for search term san. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
          </span>
        </span>
        <div
          class=" css-1pahdxg-control"
        >
          <div
            class=" css-1wcf4nn-ValueContainer"
          >
            <div
              class="css-b8ldur-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-3-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value="san"
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                >
                  san
                </div>
              </div>
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class=" css-1xh8qep-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-1gtu0rj-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class=" css-26l3qy-menu"
        >
          <div
            class=" css-4ljt47-MenuList"
          >
            <div
              class=" css-1tfbn7p-LoadingMessage"
            >
              Loading...
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`SearchForm should show suggestions 1`] = `
<div>
  <form
    class="search-form"
  >
    <div
      class="mb-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          🔍
        </span>
      </div>
      <div
        class=" css-1s1mbqj-SelectContainer"
      >
        <span
          aria-live="polite"
          class="css-1f43avz-a11yText-A11yText"
        >
          <span
            id="aria-selection-event"
          >
             
            
          </span>
          <span
            id="aria-context"
          >
             
             option San Francisco focused, 1 of 1. 1 result available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
          </span>
        </span>
        <div
          class=" css-1pahdxg-control"
        >
          <div
            class=" css-1wcf4nn-ValueContainer"
          >
            <div
              class=" css-1wa3eu0-placeholder"
            >
              Enter city name
            </div>
            <div
              class="css-b8ldur-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-4-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-1gtu0rj-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class=" css-26l3qy-menu"
        >
          <div
            class=" css-4ljt47-MenuList"
          >
            <div
              class=" css-1n7v3ny-option"
              id="react-select-4-option-0"
              tabindex="-1"
            >
              San Francisco
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
